feat: fully generic module
